--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -31,13 +31,14 @@
             android:id="@+id/radio_not_confirmed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Não confirmado" />
 
         <RadioButton
             android:id="@+id/radio_present"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Present" />
+            android:text="Presente" />
 
         <RadioButton
             android:id="@+id/radio_absent"
