--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,33 @@
         android:id="@+id/nav_all_guests"
         android:name="com.example.convidados.view.AllGuestsFragment"
         android:label="@string/menu_all_guests"
-        tools:layout="@layout/fragment_all_guests" />
+        tools:layout="@layout/fragment_all_guests">
+        <argument
+            android:name="FILTER"
+            app:argType="integer"
+            android:defaultValue="0"/>
+    </fragment>
 
     <fragment
         android:id="@+id/nav_present"
-        android:name="com.example.convidados.view.PresentFragment"
+        android:name="com.example.convidados.view.AllGuestsFragment"
         android:label="@string/menu_present"
-        tools:layout="@layout/fragment_present" />
+        tools:layout="@layout/fragment_all_guests" >
+        <argument
+            android:name="FILTER"
+            app:argType="integer"
+            android:defaultValue="1"/>
+    </fragment>
 
     <fragment
         android:id="@+id/nav_absent"
-        android:name="com.example.convidados.view.AbsentFragment"
+        android:name="com.example.convidados.view.AllGuestsFragment"
         android:label="@string/menu_absent"
-        tools:layout="@layout/fragment_absent" />
+        tools:layout="@layout/fragment_all_guests" >
+        <argument
+            android:name="FILTER"
+            app:argType="integer"
+            android:defaultValue="2"/>
+
+    </fragment>
 </navigation>
